--- a/header.tex
+++ b/header.tex
@@ -27,13 +27,13 @@
 %\usepackage[T1]{fontenc} %ueblich
 \usepackage{subfigure}
 
-\renewcommand{\thesubfigure}{\thefigure.\arabic{subfigure}}
-\makeatletter
-\renewcommand{\p@subfigure}{}
-\renewcommand{\@thesubfigure}{\thesubfigure:\hskip\subfiglabelskip}
-\makeatother
+%\renewcommand{\thesubfigure}{\thefigure.\arabic{subfigure}}
+%\makeatletter
+%\renewcommand{\p@subfigure}{}
+%\renewcommand{\@thesubfigure}{\thesubfigure:\hskip\subfiglabelskip}
+%\makeatother
 
-\makeindex
+%\makeindex
 
 %Paket zum importieren von Bildern
 \usepackage{graphicx}
@@ -80,10 +80,10 @@
 \newcommand{\mybottomrule}{\specialrule{0.12em}{0em}{0em}} 
 \renewcommand{\arraystretch}{1.2}
 
-\renewcommand{\thesubfigure}{\thefigure.\arabic{subfigure}}
-\makeatletter
-\renewcommand{\p@subfigure}{}
-\renewcommand{\@thesubfigure}{\thesubfigure:\hskip\subfiglabelskip}
-\makeatother
+%\renewcommand{\thesubfigure}{\thefigure.\arabic{subfigure}}
+%\makeatletter
+%\renewcommand{\p@subfigure}{}
+%\renewcommand{\@thesubfigure}{\thesubfigure:\hskip\subfiglabelskip}
+%\makeatother
 
-\makeindex
+%\makeindex
