--- a/literature.bib
+++ b/literature.bib
@@ -113,8 +113,6 @@
            note = "Stand 05.02.2014",
        }
  
- http://www.itk.org/pipermail/insight-users/2003-September/004762.html
- 
  @BOOK{radio:hounsfield,
     AUTHOR       = "Bücheler, Egon and Lackner, Klaus-Jürgen and Thelen, Manfred",
     TITLE        = "Einführung in die Radiologie: Diagnostik und Interventionen",
@@ -142,6 +140,13 @@
   	PUBLISHER    = "Galilieo Press",
   	YEAR         = "2007",
   }
+ 
+ @BOOK{burger:bv,
+   	AUTHOR       = "Burger, Wilhelm and Burge, Mark James",
+   	TITLE        = "Digitale Bildverarbeitung - Eine Einführung mit Java und ImageJ",
+   	PUBLISHER    = "Springer",
+   	YEAR         = "2006",
+   }
  
  @BOOK{goll:swa,
   	AUTHOR       = "Goll, Joachim and Dausmann, Manfred",
