--- a/grundlagenMbv.tex
+++ b/grundlagenMbv.tex
@@ -247,6 +247,7 @@ Im DICOM-Standard ist ein Algorithmus gegeben, um die Pixeldaten zu konvertieren
 	\STATE $Y = ((X-(C-0.5)) / (W-1)+0.5)*(Y_{max}-Y_{min})+Y_{min}$
 \ENDIF
 \end{algorithmic}
+\label{windowing_algo}
 \end{algorithm}
 
 
